<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Our Pills Talk</string>
    <string name="action_settings">Settings</string>
    <string name="lastScan">Last Scan</string>
    <string name="help_me">Help</string>
    <string name="scanHistory">Scan History</string>
    <string name="ButtonTextMedOrgAu">CMI Website</string>
    <string name="ButtonTextInstructions">Instructions</string>
    <string name="ButtonTextPause">Pause</string>
    <string name="ButtonTextPlay">Play</string>
    <string name="ButtonTextPlayPause">Play/Pause</string>
    <string name="ButtonTextPlayStop">Play/Stop</string>
    <string name="ButtonTextReplay">Replay</string>
    <string name="ButtonTextScan">Scan My Pills</string>
    <string name="ButtonTextStop">Stop</string>
    <string name="ButtonTextChoiceCMIAudio">CMI Audio</string>
    <string name="ButtonTextChoiceCMIPDF">CMI PDF</string>
    <string name="ButtonTextChoiceCMIWebsite">CMI Website</string>
    <string name="hello_world">Hello world!</string>
    <string name="TextViewText">Text:</string>
    <string name="TextViewFile">File:</string>
    <string name="progress_dialog_title_downloading">Downloading...</string>
    <string name="progress_dialog_title_connecting">Connecting...</string>
    <string name="progress_dialog_message_prefix_downloading">Downloading file</string>
    <string name="progress_dialog_message_prefix_connecting">Connecting to</string>
    <string name="user_message_download_complete">Download complete!</string>
    <string name="user_message_download_canceled">Download canceled!</string>
    <string name="error_message_bad_url">Error: Invalid URL!</string>
    <string name="error_message_file_not_found">Error: File not found!</string>
    <string name="error_message_general">Error downloading file!</string>
    <string name="title_activity_for_test">For_test</string>
    <string name="title_activity_tts">TTSActivity</string>
    <string name="title_activity_last_scan">Last_scan</string>
    <string name="title_activity_scan_history">Scan_history</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help_me">Help_me</string>
    <string name="title_activity_sub_scan_history">Sub_scan_history</string>
    <string name="action_search">Search</string>
    <string name="OK">OK</string>
    <string name="EmergencyActivity">Emergency</string>
    <string name="privPolicy">All data gathered remains on device and will not be stored outside of the device. Data may be sent to a translation service where said service may store that data for the purpose of providing a translation.</string>
    <string name="privDialogTitle">Privacy Policy</string>
    <string name="eraseTitle">Confirm Erase</string>
    <string name="eraseUserInfo">Are you sure you wish to erase user info?</string>
    <string name="eraseScanInfo">Are you sure you wish to erase scan history?</string>
</resources>