<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">

    <Button
        android:id="@+id/ButtonPlayPause"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:text="@string/ButtonTextPlayPause"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold" />
    
     <Button
	     android:id="@+id/ButtonReplay"
	     android:layout_width="fill_parent"
	     android:layout_height="110dp"
	     android:layout_weight="1"
	     android:text="@string/ButtonTextReplay"
	     android:textColor="@android:color/black"
	     android:textSize="50sp"
	     android:textStyle="bold" />
     
     <TextView
        android:id="@+id/TextViewResultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/TextViewFile"
        android:textColor="@android:color/black" />
     
    <EditText
        android:id="@+id/EditTextResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:inputType=""
        android:hint=""
        android:textColor="@android:color/black" />
</LinearLayout>