<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppBaseTheme"

    android:foreground="?android:attr/selectableItemBackground"
    android:focusableInTouchMode="false"
    android:focusable="false"
    android:clickable="false"
    android:id="@+id/mainFrameLayout"
    android:background="?android:attr/selectableItemBackground">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:id="@+id/mainLayout">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="#FFF"
            android:focusable="false"
            android:focusableInTouchMode="false">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical"
                android:drawable="@color/white"
                android:layout_margin="1dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:background="#ffc3d888">

                <ImageView
                    android:id="@+id/ButtonScan"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:src="@drawable/qr_logo"
                    android:clickable="true"

                    />

                <TextView
                    android:id="@+id/ButtonScanText"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:scaleType="fitXY"
                    android:textColor="#FFFFFF"
                    android:text="@string/ButtonTextScan"
                    android:layout_margin="0dp"
                    android:textSize="40dp"

                    android:clickable="true"
                    android:shadowColor="#000"
                    android:shadowRadius="15"
                    android:singleLine="true"
                    android:autoText="true"
                    android:inputType="textNoSuggestions"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="Scan My Pills"
                    android:id="@+id/scanEngText"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FFFFFF"
                    android:layout_weight="2" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="0dip"

            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="1dp"
                android:background="#FF1bbc9b"
                >

                <ImageView
                    android:id="@+id/historyButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/scanhistory_button"
                    android:gravity="center"
                    android:clickable="true"

                    android:layout_weight="10"
                    android:focusable="false" />
                <TextView
                    android:id="@+id/historyButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"

                    android:text="@string/scanHistory"
                    android:clickable="true"
                    android:textSize="30dp"
                    android:textColor="#FFFFFF"
                    android:autoText="false"
                    android:layout_weight="8"
                    android:shadowColor="#000"
                    android:shadowRadius="15"
                    android:gravity="center"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="History"
                    android:id="@+id/histEngText"
                    android:layout_weight="5"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="1dp"

                android:nestedScrollingEnabled="false"
                android:background="#FF9b58b5">

                <ImageView
                    android:id="@+id/settingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:padding="4dp"
                    android:gravity="center"
                    android:src="@drawable/setting_button"

                    android:clickable="true"

                    />

                <TextView
                    android:id="@+id/settingsButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:scaleType="fitXY"
                    android:gravity="center"

                    android:clickable="true"

                    android:textSize="30dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/action_settings"
                    android:shadowColor="#000"
                    android:shadowRadius="15"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="Settings"
                    android:id="@+id/settEngText"
                    android:layout_weight="5"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="1dp"
                android:background="#FFe84c3d"
                >

                <ImageView
                    android:id="@+id/emergencyButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:src="@drawable/emergency_logo"


                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="Emergency"
                    android:id="@+id/emergencyText"
                    android:clickable="true"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="#FFF"
                    android:layout_weight="8"
                    android:shadowColor="#000"
                    android:shadowRadius="15"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="Emergency"
                    android:id="@+id/emgEngText"
                    android:layout_weight="5"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="1dp"
                android:background="#ff3598db"
                >

                <ImageView
                    android:id="@+id/helpButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:layout_margin="4dp"
                    android:gravity="center"

                    android:src="@drawable/helpme_button"

                    android:clickable="true"
                    android:textColor="#FFFFFF"
                    />
                <TextView
                    android:id="@+id/helpButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:scaleType="fitXY"
                    android:gravity="center"
                    android:clickable="true"
                    android:text="@string/help_me"
                    android:textSize="30dp"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000"
                    android:shadowRadius="10"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/helpEngText"
                    android:text="Help"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FFFFFF"
                    android:layout_weight="5" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_margin="1dp"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#000">

                <TextView
                    android:id="@+id/AppName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:enabled="false"
                   android:visibility="gone" />

                <TextView
                    android:id="@+id/lastScanButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:gravity="center"
                    android:text="@string/lastScan"
                    android:clickable="true"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000"
                    android:shadowRadius="10" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:clickable="true"
                    android:id="@+id/emegencyLayout"
                    android:gravity="center"
                    android:background="#000"
                    android:layout_margin="1dp"
                    android:visibility="gone">

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>

    <!--android:theme="@style/AppBaseTheme"  android:background="@drawable/custom_border"-->